// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SSR 1`] = `
Object {
  "[@react-libraries/use-ssr][Component01]": 100,
}
`;

exports[`SSR 2`] = `
NodeList [
  100,
  2,
]
`;

exports[`SSR 3`] = `
NodeList [
  100,
  1,
]
`;

exports[`SSR 4`] = `Object {}`;

exports[`SSR 5`] = `
NodeList [
  100,
  1,
  100,
  1,
]
`;

exports[`SSR 6`] = `
Object {
  "[@react-libraries/use-ssr][Component01]": 100,
  "[@react-libraries/use-ssr][Component][02]": 100,
}
`;

exports[`SSR 7`] = `
NodeList [
  100,
  1,
  100,
  1,
]
`;
